Fix too wide search box

--- a/SeeSpotHelp/SeeSpotHelp/public/Content/site.css
+++ b/SeeSpotHelp/SeeSpotHelp/public/Content/site.css
@@ -63,6 +63,12 @@ p {
     border: solid 1px black;
 }
 
+.searchInputBox {
+  max-width: 600px;
+  margin: 0 auto;
+}
+
+
 .privateBetaPage {
     padding: 20px;
     margin: 20px;
